--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@use-expo/font": "^2.0.0",
+    "babel-plugin-inline-import": "^3.0.0",
     "expo": "~42.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-status-bar": "~1.0.4",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
