--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-inline-import": "^3.0.0",
     "expo": "~42.0.0",
     "expo-app-loading": "^1.1.2",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
