--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/stack": "^5.14.5",
     "@use-expo/font": "^2.0.0",
     "babel-plugin-inline-import": "^3.0.0",
+    "color-interpolate": "^1.0.5",
     "expo": "~42.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
+    "intl": "^1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
