--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
 		"dev": "nodemon server"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"express": "^4.17.1",
 		"mysql2": "^2.2.5",
 		"uuid": "^8.3.2"
