--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,11 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"googleapis": "^81.0.0",
 		"mysql2": "^2.2.5",
+		"nodemailer": "^6.6.3",
 		"uuid": "^8.3.2"
 	}
 }
