--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~42.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-image-picker": "~10.2.2",
+    "expo-linking": "~2.3.1",
     "expo-status-bar": "~1.0.4",
     "intl": "^1.2.5",
     "react": "16.13.1",
