--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"googleapis": "^81.0.0",
+		"image-size": "^1.0.0",
 		"mysql2": "^2.2.5",
 		"nodemailer": "^6.6.3",
 		"uuid": "^8.3.2"
