--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@react-native-community/hooks": "^2.6.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/drawer": "^5.12.5",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "@use-expo/font": "^2.0.0",
-    "babel-plugin-inline-import": "^3.0.0",
-    "color-interpolate": "^1.0.5",
-    "expo": "~42.0.0",
-    "expo-app-loading": "^1.1.2",
-    "expo-image-picker": "~10.2.2",
-    "expo-linking": "~2.3.1",
-    "expo-status-bar": "~1.0.4",
-    "intl": "^1.2.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0"
-  },
-  "private": true
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject",
+		"apiDev": "cd api && yarn dev",
+		"api": "cd api && yarn start"
+	},
+	"dependencies": {
+		"@react-native-community/hooks": "^2.6.0",
+		"@react-native-community/masked-view": "0.1.10",
+		"@react-navigation/drawer": "^5.12.5",
+		"@react-navigation/native": "^5.9.4",
+		"@react-navigation/stack": "^5.14.5",
+		"@use-expo/font": "^2.0.0",
+		"babel-plugin-inline-import": "^3.0.0",
+		"color-interpolate": "^1.0.5",
+		"expo": "~42.0.0",
+		"expo-app-loading": "^1.1.2",
+		"expo-image-picker": "~10.2.2",
+		"expo-linking": "~2.3.1",
+		"expo-status-bar": "~1.0.4",
+		"intl": "^1.2.5",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+		"react-native-gesture-handler": "~1.10.2",
+		"react-native-reanimated": "~2.2.0",
+		"react-native-safe-area-context": "3.2.0",
+		"react-native-screens": "~3.4.0",
+		"react-native-svg": "12.1.1",
+		"react-native-web": "~0.13.12"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0"
+	},
+	"private": true
 }
