--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"api": "cd api && yarn start"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.15.5",
 		"@react-native-community/hooks": "^2.6.0",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-navigation/drawer": "^5.12.5",
