--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
-		"start": "expo start",
+		"start": "concurrently \"expo start\" \"yarn api\"",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
 		"eject": "expo eject",
 		"apiDev": "cd api && yarn dev",
-		"api": "cd api && yarn start"
+		"api": "cd api && yarn start",
+		"dev": "concurrently \"expo start\" \"yarn apiDev\""
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "^1.15.5",
@@ -37,7 +38,8 @@
 		"react-native-web": "~0.13.12"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.9.0"
+		"@babel/core": "^7.9.0",
+		"concurrently": "^6.2.0"
 	},
 	"private": true
 }
