--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"start": "node server",
 		"dev": "nodemon server",
-		"secret": "node generateSecret 500"
+		"secret": "node generateSecret"
 	},
 	"dependencies": {
 		"bcrypt": "^5.0.1",
