--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
 		"react-native-gesture-handler": "~1.10.2",
 		"react-native-keyboard-aware-scroll-view": "^0.9.4",
+		"react-native-netinfo": "^1.1.0",
 		"react-native-reanimated": "~2.2.0",
+		"react-native-root-siblings": "^4.1.1",
 		"react-native-safe-area-context": "3.2.0",
 		"react-native-screens": "~3.4.0",
 		"react-native-svg": "12.1.1",
