--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
 		"@react-navigation/drawer": "^5.12.5",
 		"@react-navigation/native": "^5.9.4",
 		"@react-navigation/stack": "^5.14.5",
-		"@use-expo/font": "^2.0.0",
 		"babel-plugin-inline-import": "^3.0.0",
 		"color-interpolate": "^1.0.5",
 		"expo": "~42.0.0",
 		"expo-app-loading": "^1.1.2",
+		"expo-asset": "^8.3.3",
+		"expo-constants": "^11.0.1",
 		"expo-image-picker": "~10.2.2",
 		"expo-linking": "~2.3.1",
+		"expo-splash-screen": "^0.11.2",
 		"expo-status-bar": "~1.0.4",
 		"intl": "^1.2.5",
 		"react": "16.13.1",
