Added no connection screen

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@react-native-async-storage/async-storage": "^1.15.5",
 		"@react-native-community/hooks": "^2.6.0",
 		"@react-native-community/masked-view": "0.1.10",
+		"@react-native-community/netinfo": "^6.0.0",
 		"@react-navigation/drawer": "^5.12.5",
 		"@react-navigation/native": "^5.9.4",
 		"@react-navigation/stack": "^5.14.5",
@@ -34,7 +35,6 @@
 		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
 		"react-native-gesture-handler": "~1.10.2",
 		"react-native-keyboard-aware-scroll-view": "^0.9.4",
-		"react-native-netinfo": "^1.1.0",
 		"react-native-reanimated": "~2.2.0",
 		"react-native-root-siblings": "^4.1.1",
 		"react-native-safe-area-context": "3.2.0",
