--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,10 @@
 		"uuid": "node generateUuid"
 	},
 	"dependencies": {
+		"@rodrigogs/mysql-events": "^0.6.0",
 		"bcrypt": "^5.0.1",
 		"dotenv": "^10.0.0",
+		"expo-server-sdk": "^3.6.0",
 		"express": "^4.17.1",
 		"googleapis": "^81.0.0",
 		"image-size": "^1.0.0",
