--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
 		},
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
-			"supportsTablet": true
+			"supportsTablet": true,
+			"infoPlist": { "UIBackgroundModes": ["remote-notification"] }
 		},
 		"android": {
 			"adaptiveIcon": {
