--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"expo-constants": "^11.0.1",
 		"expo-image-picker": "~10.2.2",
 		"expo-linking": "~2.3.1",
+		"expo-notifications": "^0.12.3",
 		"expo-splash-screen": "^0.11.2",
 		"expo-status-bar": "~1.0.4",
 		"intl": "^1.2.5",
