--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@rodrigogs/mysql-events": "^0.6.0",
 		"bcrypt": "^5.0.1",
+		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"expo-server-sdk": "^3.6.0",
 		"express": "^4.17.1",
