--- a/api/package.json
+++ b/api/package.json
@@ -24,5 +24,8 @@
 		"mysql2": "^2.2.5",
 		"nodemailer": "^6.6.3",
 		"uuid": "^8.3.2"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13"
 	}
 }
