--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
 		"devOffline": "concurrently \"expo start --offline\" \"yarn apiDev\""
 	},
 	"dependencies": {
-		"@react-native-async-storage/async-storage": "^1.15.5",
+		"@react-native-async-storage/async-storage": "~1.15.0",
 		"@react-native-community/hooks": "^2.6.0",
 		"@react-native-community/masked-view": "0.1.10",
-		"@react-native-community/netinfo": "^6.0.0",
+		"@react-native-community/netinfo": "6.0.0",
 		"@react-navigation/drawer": "^5.12.5",
 		"@react-navigation/native": "^5.9.4",
 		"@react-navigation/stack": "^5.14.5",
 		"babel-plugin-inline-import": "^3.0.0",
 		"color-interpolate": "^1.0.5",
 		"expo": "~42.0.0",
-		"expo-app-loading": "^1.1.2",
-		"expo-asset": "^8.3.3",
-		"expo-constants": "^11.0.1",
+		"expo-app-loading": "1.1.2",
+		"expo-asset": "~8.3.3",
+		"expo-constants": "~11.0.1",
 		"expo-image-picker": "~10.2.2",
 		"expo-linking": "~2.3.1",
 		"expo-notifications": "^0.12.3",
